--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Arial", sans-serif;
-  background-color: whitesmoke;
+  background-image: "heart.jpg";
   margin: 0;
   display: flex;
   justify-content: center;
