--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: "Raleway", sans-serif;
   background-image: url("heart.jpg");
   margin: 0;
   display: flex;
