--- a/style.css
+++ b/style.css
@@ -73,12 +73,19 @@ body {
   background-color: #c9646e;
 }
 
+/* Styling for the dancing cat GIF */
 .dancing-cat {
-  display: none;
+  display: none; /* Hidden by default */
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 10;
+}
+
+.dancing-cat img {
+  max-width: 100%;
+  height: auto;
 }
 
 .try-again {
